@@ -173,13 +173,18 @@ contact.manualUrl  = "http://gemstracker.org/wiki/doku.php?id=userzone:userdoc:s
 ; block  				= Block any sending of mail.
 ; bounce 				= When set to 1 all mails are not sent to the
 ;         				  suplied TO address, but redirects them to
-;                         the FROM not respondent address. This allows
-;                         testing without altering respondent e-mail
-;                         addresses.
+;                         the current user or the current FROM address.
+;                         This allows testing without altering respondent
+;                         e-mail addresses.
 ; createAccountTemplate = Default Template code for a Reset password mail
 ; multiLanguage         = Have the mail depend on the user's language setting
 ; resetPasswordTemplate = Default Template code for a Create account mail
 ; site   				= Supply a general site FROM address.
+; staffBounce           = When set to 1 all staff mails are not sent to the
+;         				  suplied TO address, but redirects them to
+;                         the current users or the FROM address. This allows
+;                         testing without altering staff e-mail addresses.
+;                         When not set, bounce is used.
 ;----------------------------------------------------------------------
 
 ; email.bcc   =
@@ -189,6 +194,7 @@ email.createAccountTemplate = accountCreate
 email.multiLanguage = 1
 email.resetPasswordTemplate = passwordReset
 ; email.site   =
+email.staffBounce = 0
 
 ;----------------------------------------------------------------------
 ; EXPORT SECTION
@@ -527,6 +533,7 @@ admin.user = superadmin
 admin.pwd  = superadmin
 
 email.bounce = 1
+email.staffBounce = 1
 
 passwords.notTheName = 0
 passwords.staff.capsCount = 0
